--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -67,6 +67,7 @@
     "lodash": "^4.17.21",
     "nconf": "^0.11.3",
     "node-fetch": "^2.6.7",
+    "puppeteer": "^13.7.0",
     "puppeteer-core": "^13.7.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
