--- a/platforms/tktrex/shared/package.json
+++ b/platforms/tktrex/shared/package.json
@@ -3,6 +3,7 @@
   "packageManager": "yarn@3.1.1",
   "scripts": {
     "clean": "rm -rf ./build",
+    "lint": "eslint ./src",
     "test": "jest --maxWorkers=8",
     "tdd": "jest --watch --maxWorkers=8",
     "dump-parsed-data": "ts-node bin/dump-parsed-data.ts",
