--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "release-it-yarn-workspaces": "^2.0.1",
     "ts-jest": "^27.1.5",
     "typescript": "^4.7.2",
-    "webpack": "^5.73.0"
+    "webpack": "^5.73.0",
+    "zx": "^6.2.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
