--- a/.github/workflows/master_release.yml
+++ b/.github/workflows/master_release.yml
@@ -96,8 +96,9 @@ jobs:
           yarn yt:ext dist:guardoni
           yarn tk:ext dist
           yarn tk:ext dist:guardoni
-          yarn guardoni build
+          yarn guardoni build:cli
           yarn guardoni pkg
+          yarn guardoni build:app
           yarn ycai build
 
   guardoni_build:
