--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -133,12 +133,13 @@
     "scripts": [
       "bin/guardoni-cli.js",
       "../../node_modules/puppeteer/lib/*.js",
-      "../../node_modules/puppeteer-extra-plugin-stealth/**/*.js"
+      "../../node_modules/puppeteer-extra-plugin-stealth/**/*.*"
     ],
     "assets": [
       "static/index.html",
       "config/default.json",
-      "package.json"
+      "package.json",
+      "../../node_modules/puppeteer-extra-plugin-stealth/**/*.*"
     ],
     "targets": [
       "node16-linux-x64",
