--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "packageManager": "yarn@3.1.1",
   "scripts": {
     "commit": "commit",
-    "clean": "yarn workspaces foreach run clean",
+    "clean": "yarn workspaces foreach -v run clean",
     "lint": "yarn workspaces foreach -v run lint",
     "type-check": "yarn workspaces foreach run tsc --noEmit",
     "build": "yarn workspaces foreach run build",
