--- a/platforms/tktrex/backend/package.json
+++ b/platforms/tktrex/backend/package.json
@@ -13,6 +13,10 @@
     "parserv:watch": "DEBUG=\"*\" ts-node-dev bin/parserv3"
   },
   "author": "https://github.com/tracking-exposed/tktrex/graphs/contributors",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tracking-exposed/trex.git"
+  },
   "license": "AGPL-3.0",
   "dependencies": {
     "body-parser": "^1.19.1",
