chore: upgrade electron-builder@23.2.0

--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -11,8 +11,7 @@ on:
       - refactor/**
     paths:
       - "packages/shared/**"
-      - "platforms/**/extension/**"
-      - "platforms/guardoni/**"
+      - "platforms/**"
 
 jobs:
   pull_request:
