fix: expose guardoni cli as entrypoint

--- a/docker/guardoni/Dockerfile
+++ b/docker/guardoni/Dockerfile
@@ -12,15 +12,15 @@ RUN yarn tk:ext build
 RUN yarn yt:ext build
 RUN yarn guardoni build
 RUN yarn guardoni pkg
-WORKDIR /guardoni/node_modules/guardoni/dist/
+WORKDIR /guardoni/platforms/guardoni/dist/
 RUN mv $(ls -1 guardoni-cli*-linux) guardoni-cli
 
 FROM selenium/standalone-chrome:102.0
 WORKDIR /guardoni
 
-COPY --from=0 /guardoni/node_modules/guardoni/dist/guardoni-cli guardoni-cli
+COPY --from=0 /guardoni/platforms/guardoni/dist/guardoni-cli guardoni-cli
 COPY --from=0 "/guardoni/node_modules/@tktrex/extension/build" tktrex
 COPY --from=0 "/guardoni/node_modules/@yttrex/extension/build" yttrex
 COPY --from=0 /guardoni/docker/guardoni/guardoni.config.json .
 
-
+ENTRYPOINT [ "/guardoni/guardoni-cli" ]
