--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "packageManager": "yarn@3.1.1",
   "scripts": {
     "commit": "commit",
-    "clean": "yarn workspaces foreach run clean",
+    "clean": "yarn workspaces foreach -v run clean",
     "lint": "yarn workspaces foreach -v run lint",
     "type-check": "yarn workspaces foreach run tsc --noEmit",
     "build": "yarn workspaces foreach run build",
@@ -63,7 +63,8 @@
     "release-it-yarn-workspaces": "^2.0.1",
     "ts-jest": "^27.1.5",
     "typescript": "^4.7.2",
-    "webpack": "^5.73.0"
+    "webpack": "^5.73.0",
+    "zx": "^6.2.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
