--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "build:cli": "webpack -c webpack.cli.config.ts",
     "build:app": "webpack -c webpack.app.config.ts",
-    "watch:cli": "NODE_ENV-development webpack watch -c webpack.cli.config.ts",
+    "watch:cli": "NODE_ENV=development webpack watch -c webpack.cli.config.ts",
     "watch:app": "NODE_ENV=development webpack watch -c webpack.app.config.ts",
     "dev": "DOTENV_CONFIG_PATH=../../.env.development electron ./reload.js",
     "start": "electron .",
