fix: local keypair for extension

--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Build guardoni
         working-directory: ./platforms/guardoni
-        run: ./scripts/cli-build.sh
+        run: ./scripts/cli-build.mjs
 
       - name: Test
         run: |
