fix: local keypair for extension (#565)

--- a/platforms/tktrex/extension/public/manifest.json
+++ b/platforms/tktrex/extension/public/manifest.json
@@ -37,5 +37,5 @@
     }
   ],
 
-  "web_accessible_resources": ["interceptor.js", "*.png"]
+  "web_accessible_resources": ["interceptor.js", "*.png", "settings.json"]
 }
