chore(tktrex): removed not streamlined workspaces

--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "platforms/yttrex/*",
     "platforms/tktrex/docs",
     "platforms/tktrex/extension",
-    "platforms/tktrex/methodology",
     "platforms/tktrex/backend",
-    "platforms/tktrex/shared",
-    "platforms/tktrex/observatory"
+    "platforms/tktrex/shared"
   ],
   "packageManager": "yarn@3.1.1",
   "scripts": {
@@ -39,7 +37,6 @@
     "tk:shared": "yarn workspace @tktrex/shared",
     "tk:backend": "yarn workspace @tktrex/backend",
     "tk:ext": "yarn workspace @tktrex/extension",
-    "tk:observatory": "yarn workspace @tktrex/observatory",
     "yt:shared": "yarn workspace @yttrex/shared",
     "yt:backend": "yarn workspace @yttrex/backend",
     "yt:ext": "yarn workspace @yttrex/extension",
