--- a/platforms/tktrex/extension/package.json
+++ b/platforms/tktrex/extension/package.json
@@ -17,8 +17,8 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@types/lodash": "^4.14.182",
-    "create-react-class": "^15.7.0",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.1",
     "fp-ts": "^2.11.9",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
@@ -28,7 +28,6 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/create-react-class": "^15.6.3",
     "@types/debug": "^4.1.7",
     "@types/jquery": "^3.5.14",
     "@types/node": "^16.11.36",
