--- a/platforms/yttrex/extension/.env.development
+++ b/platforms/yttrex/extension/.env.development
@@ -1,4 +1,5 @@
 BUNDLE_TARGET=firefox
+NODE_ENV=development
 API_ROOT=http://localhost:9000/api
 WEB_ROOT=http://localhost:1313
 DATA_CONTRIBUTION_ENABLED=true
