chore: upgrade eslint deps

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "@release-it/conventional-changelog": "^4.3.0",
     "@types/node": "^16.11.36",
     "@types/prettier": "^2.6.3",
-    "eslint": "^8.16.0",
+    "eslint": "^8.19.0",
+    "eslint-plugin-n": "^15.2.4",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "jest-dev-server": "^6.0.3",
