chore(guardoni): define docker image (#550)
Co-authored-by: ascariandrea <dev.ascariandrea@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,8 @@
 __mocks__
 .husky
 **/build
-**/docker
+**/docker/electron-builder
 **/coverage
 **/node_modules
+docker
+!docker/guardoni/guardoni.config.json
