fix: use new 'experiments2' table for mongo collection 'experiments'

--- a/platforms/tktrex/backend/config/settings.json
+++ b/platforms/tktrex/backend/config/settings.json
@@ -5,9 +5,8 @@
     "htmls": "htmls",
     "metadata": "metadata",
     "full": "full",
-    "directives": "directives",
     "emails": "emails2",
-    "experiments": "experiments"
+    "experiments": "experiments2"
   },
 
   "mongoHost": "localhost",
