--- a/platforms/yttrex/backend/config/settings.json
+++ b/platforms/yttrex/backend/config/settings.json
@@ -9,8 +9,7 @@
       "answers": "answers",
       "recommendations": "recommendations",
       "ytvids": "ytvids",
-      "experiments": "experiments",
-      "directives": "directives",
+      "experiments": "experiments2",
       "emails": "emails",
       "tokens": "tokens",
       "creators": "creators",
