--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clean": "yarn workspaces foreach -v run clean",
     "lint": "yarn workspaces foreach -v run lint",
     "type-check": "yarn workspaces foreach run tsc --noEmit",
-    "build": "yarn workspaces foreach run build",
+    "build": "scripts/build.sh",
     "test": "jest",
     "docs": "yarn workspace @trex/docs",
     "taboule": "yarn workspace @trex/taboule",
