fix(guardoni): hook for interaction with cookie modal

--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -22,7 +22,9 @@
     "postinstall": "electron-builder install-app-deps",
     "prepack": "yarn build",
     "check-stealth": "ts-node ./bin/check-stealth.ts",
-    "tdd": "jest --watch --verbose"
+    "tdd": "jest --watch --verbose",
+    "cli-yt-test-videos": "node ./scripts/cli-yt-test-videos.mjs",
+    "cli-yt-test-home": "node ./scripts/cli-yt-test-home.mjs"
   },
   "bin": {
     "cli": "./bin/guardoni-cli.js"
