--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -10,8 +10,8 @@ on:
       - fix/**
       - refactor/**
     paths:
-      - "packages/shared/**"
-      - "platforms/**"
+      - 'packages/shared/**'
+      - 'platforms/**'
 
 jobs:
   pull_request:
@@ -34,7 +34,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "yarn"
+          cache: 'yarn'
           cache-dependency-path: yarn.lock
 
       - name: Install modules
@@ -69,9 +69,6 @@ jobs:
   guardoni_build:
     name: Guardoni build
     runs-on: ${{ matrix.config.os }}
-    # defaults:
-    #   run:
-    #     shell: bash --noprofile --norc -exo pipefail {0}
     strategy:
       max-parallel: 1
       matrix:
@@ -138,11 +135,11 @@ jobs:
         working-directory: ./platforms/guardoni
         run: ./scripts/cli-build.mjs
 
-      - name: Test YT cli
-        working-directory: ./platforms/guardoni
-        run: |
-          ./scripts/cli-yt-test-home.mjs
-          ./scripts/cli-yt-test-videos.mjs
+      # - name: Test CLI - YT Home
+      #   run: yarn guardoni cli-yt-test-home
+
+      # - name: Test CLI - YT Videos
+      #   run: yarn guardoni cli-yt-test-videos
 
       - name: Stop PM2
         run: yarn pm2 stop all
