fix(tktrex): added count-o-clock script in package.json

--- a/platforms/tktrex/backend/package.json
+++ b/platforms/tktrex/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint ./",
     "test": "jest",
+    "coc": "DEBUG=* ts-node bin/count-o-clock.js",
     "tto:watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/observatory",
     "tto:start": "DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node bin/observatory",
     "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
