--- a/platforms/tktrex/backend/package.json
+++ b/platforms/tktrex/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint ./",
     "test": "jest",
+    "coc": "DEBUG=* ts-node bin/count-o-clock.js",
     "tto:watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/observatory",
     "tto:start": "DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node bin/observatory",
     "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
@@ -32,7 +33,7 @@
     "moment": "^2.29.2",
     "mongodb": "^4.3.1",
     "nacl-signature": "^1.0.0",
-    "nconf": "^0.8.5",
+    "nconf": "^0.11.3",
     "node-fetch": "^2.6.7",
     "nodemon": "^1.19.4",
     "tweetnacl": "^0.14.5"
