--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -130,7 +130,8 @@
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "xvfb": "^0.4.0"
   },
   "pkg": {
     "scripts": [
