--- a/platforms/tktrex/extension/package.json
+++ b/platforms/tktrex/extension/package.json
@@ -9,8 +9,8 @@
     "build:guardoni": "BUILD_TARGET=guardoni DEBUG=\"*\" webpack",
     "dist": " DEBUG=\"*:info,*:error\" NODE_ENV=production webpack",
     "dist:guardoni": "DEBUG=\"*:info,*:error\" NODE_ENV=production BUILD_TARGET=guardoni yarn build",
-    "watch": "DEBUG=\"*:info,*:error\" webpack --watch",
-    "watch:prod": "NODE_ENV=production webpack --watch",
+    "watch": "DOTENV_CONFIG_PATH=.env.development webpack --watch",
+    "watch:prod": "webpack --watch",
     "test": "jest"
   },
   "dependencies": {
