chore: testing all the progress for 2.6.2 version (#606)
* chore: small review of the README generated for the extension reviewer

* chore: changed repository URL for YCAI package

* chore: updated docs/README so to reflect our internal set of necessary commands

* fix(yttrex): guardoni uses v2 endpoints and experiment registration works

* fix: read experiment data from 'experiment.json' on handle local lookup

* fix(guardoni): guardoni.config.json default frontends for development

* fix(tktrex): address #583 and expand the links availalbe in the popup

* fix(tktrex): removed debounce from video handler

* fix(yttrex): use researchTag as 'X-YTTrex-NonAuthCookieId' header (#608)

* fix: split settings.json reading from local db lookup (#609)

* fix(yttrex): considered singleUse variable, aquired researchTag, logging review

* chore: logging in backend of researchTag and experimentId

* tests: use mocks in spec tests  (#607)

* chore: added a few commands in the README and updated to link tiktok.tracking.exposed

* chore: review README, removed diagnostics from the repo

* chore(guardoni): small README summarizing basic operation for experiment registration

* chore(yttrex): updating tests and README

* fix(guardoni): removed "newProfile" in favour of "execount" to keep track of profile usage counting (#610)

* test(yttrex): research tag in header

* test(tktrex): research tag in header

* test(yttrex): renamed parser tests from 'spec' to 'e2e'

* test(tktrex): research tag wrong variable

* fix(tktrex): corrected return value when a new experiment is registered, trimmed verbosity #606

* fix(tktrex): closes #582 by tracking search-updates by the same Id

* chore(tktrex): trimming parser debug and attempting to mine videoHref from feeds

* fix(tktrex): improved video scraping strategy and added 'native' video support

Co-authored-by: ascariandrea <dev.ascariandrea@gmail.com>

--- a/.github/workflows/tk_pull_request.yml
+++ b/.github/workflows/tk_pull_request.yml
@@ -48,13 +48,14 @@ jobs:
       - name: Build shared
         run: yarn shared build
 
+      - name: Spec tests
+        run: yarn tk:ext test --runInBand --ci
+
       - name: Test platform
         run: |
-          yarn pm2 start platforms/tktrex/backend/ecosystem.config.js  --env test
-          # yarn tk:backend test --runInBand --ci
-          yarn test tktrex/extension --runInBand --ci
+          yarn pm2 start platforms/tktrex/backend/ecosystem.config.js --env test
+          yarn tk:backend test --runInBand --ci --forceExit
           yarn pm2 stop all
 
       - name: Build
-        run: |
-          yarn tk:ext build
+        run: yarn tk:ext build
