--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -59,10 +59,15 @@ jobs:
           yarn clean
           yarn pm2 start --env test ./platforms/ecosystem.config.js
 
-      - name: Test
+      - name: Build extensions
+        env:
+          DOTENV_CONFIG_PATH: .env.development
         run: |
           yarn yt:ext build:guardoni
           yarn tk:ext build:guardoni
+
+      - name: Test Guardoni
+        run: |
           yarn test guardoni --ci
           yarn pm2 stop all
 
