--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -103,7 +103,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          fetch: 0
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
