test(shared): ensure extension produce new keypair when settings.json is unavailable

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -17,6 +17,7 @@
     "avenger": "^7.0.1",
     "axios": "^0.24.0",
     "canvas": "^2.9.1",
+    "cross-fetch": "^3.1.5",
     "debug": "^4.3.4",
     "fp-ts": "^2.11.9",
     "geoip-lite": "^1.4.4",
@@ -56,6 +57,7 @@
     "filemanager-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "node-loader": "^2.0.0",
     "node-sass": "^7.0.1",
