--- a/platforms/tktrex/extension/package.json
+++ b/platforms/tktrex/extension/package.json
@@ -46,6 +46,7 @@
     "io-ts": "^2.2.16",
     "jest": "^27.5.1",
     "jest-environment-jsdom-global": "^3.1.2",
+    "jest-fetch-mock": "^3.0.3",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0"
   }
