--- a/platforms/yttrex/extension/package.json
+++ b/platforms/yttrex/extension/package.json
@@ -41,6 +41,7 @@
     "jest-chrome": "^0.7.2",
     "jest-cli": "^27.5.1",
     "jest-environment-jsdom-global": "^3.1.2",
+    "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
