--- a/platforms/tktrex/extension/public/manifest.json
+++ b/platforms/tktrex/extension/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
 
-  "name": "tiktroktrex",
+  "name": "tiktok.tracking.exposed",
 
   "short_name": "tktrex",
-  "description": "A tool for academic researchers. Part of the tracking.exposed project, is meant to analyze the algorithm of a popular video portal.",
+  "description": "the Tiktok Observatory addon! A tool for algorithm analysts of the popular entertainment app. Read the docs at https://docs.tracking.exposed",
   "version": "__THIS_IS_IGNORED__PACKAGE.JSON_VERSION_IS_USED_AT_BUILD_TIME__",
   "author": "The Tracking Exposed team",
 
