fix(yttrex): handled as non-error the presence of shorts, trimmed working in yttrex extension

--- a/platforms/yttrex/backend/package.json
+++ b/platforms/yttrex/backend/package.json
@@ -9,8 +9,8 @@
     "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-follow-redirects\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
     "old_start_old": "log=$(bash -c 'git log -30 --stat --oneline --decorate --graph') DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node -r tsconfig-paths/register bin/server",
     "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node bin/server",
-    "parserv": "DEBUG=\"*,-pubtimeAPI\" ts-node bin/parser.ts",
-    "parserv:watch": "DEBUG=\"*,-pubtimeAPI\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/parser.ts",
+    "parserv": "DEBUG=\"*,-@trex:htmls:debug,-pubtimeAPI\" ts-node bin/parser.ts",
+    "parserv:watch": "DEBUG=\"*,-@trex:htmls:debug\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/parser.ts",
     "leaveserv": "DEBUG=\"*\" ts-node bin/leaves-parser.ts",
     "leaveserv:watch": "DEBUG=\"*\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/leaves-parser.ts",
     "test": "jest",
