ci(tktrex): add build step for tk backend

--- a/platforms/tktrex/backend/package.json
+++ b/platforms/tktrex/backend/package.json
@@ -12,7 +12,8 @@
     "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
     "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:cache,-send\" ts-node bin/server",
     "parserv": "DEBUG=\"*,-@trex:htmls:debug\" ts-node bin/parser",
-    "parserv:watch": "DEBUG=\"*\" ts-node-dev -r tsconfig-paths/register bin/parser"
+    "parserv:watch": "DEBUG=\"*\" ts-node-dev -r tsconfig-paths/register bin/parser",
+    "build": "tsc -b"
   },
   "author": "https://github.com/tracking-exposed/tktrex/graphs/contributors",
   "repository": {
