fix(guardoni): added update notifier to cli

--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -54,6 +54,7 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "axios": "^0.24.0",
+    "boxen": "^7.0.0",
     "csv-parse": "^4.16.3",
     "csv-stringify": "^6.0.5",
     "debug": "^4.3.4",
@@ -102,7 +103,7 @@
     "@typescript-eslint/parser": "^5.30.5",
     "bufferutil": "^4.0.6",
     "canvas": "^2.9.1",
-    "chalk": "^5.0.0",
+    "chalk": "^5.0.1",
     "electron": "16.2.8",
     "electron-builder": "^23.3.0",
     "electron-reloader": "^1.2.3",
