--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -34,8 +34,7 @@
     "ts-endpoint-express": "^2.0.0",
     "ts-io-error": "^2.0.0",
     "typelevel-ts": "^0.4.0",
-    "typescript": "^4.7.4",
-    "zenroom": "^2.2.3"
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
