--- a/platforms/ycai/studio/package.json
+++ b/platforms/ycai/studio/package.json
@@ -64,8 +64,7 @@
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "zenroom": "^2.2.3"
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
