--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,6 +23,10 @@
     "geoip-lite": "^1.4.4",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
+    "nconf": "^0.11.3",
+    "puppeteer-core": "^13.7.0",
+    "puppeteer-extra": "^3.2.3",
+    "puppeteer-extra-plugin-stealth": "^2.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.18.0",
@@ -34,9 +38,11 @@
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@types/bs58": "^4.0.1",
     "@types/chrome": "^0.0.188",
     "@types/debug": "^4.1.7",
     "@types/dotenv-webpack": "^7.0.3",
+    "@types/nconf": "^0.10.2",
     "@types/node": "^16.11.36",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
