--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -27,24 +27,25 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "yarn"
+          cache: 'yarn'
           cache-dependency-path: yarn.lock
 
       - name: Install dependencies
         run: yarn
 
-      # - name: Test project
-      #   run: yarn test
+      # - name: Shrink to zip
+      #   run: |
+      #     ./scripts/shrink.sh
+      #     ./scripts/install-from-shrinkzip.sh ./build/trex.zip ./shrink-test
 
       - name: Build Dashboard
         env:
           DOTENV_CONFIG_PATH: .env.beta
-          DEBUG: "@trex*,@YCAI*"
+          DEBUG: '@trex*,@YCAI*'
         run: yarn ycai build
 
       - name: Release Version
         run: yarn release-it --no-github.release --release-version
-
 
       - name: Deploy YCAI Dashboard
         uses: burnett01/rsync-deployments@5.1
