refactor(yt:shared): moved parsers from yt:backend

--- a/platforms/yttrex/backend/tsconfig.json
+++ b/platforms/yttrex/backend/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "./",
     "baseUrl": "./",
     "noEmit": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "paths": {
