--- a/platforms/yttrex/backend/package.json
+++ b/platforms/yttrex/backend/package.json
@@ -16,7 +16,7 @@
     "test": "jest",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed",
     "type-check": "tsc",
-    "lint": "eslint ./bin ./lib ./models ./parsers ./routes",
+    "lint": "eslint ./bin ./lib ./models ./routes",
     "open-doc-api": "ts-node bin/open-doc-api.ts"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed> and https://github.com/tracking-exposed/yttrex/graphs/contributors",
