refactor(tk:shared): moved parsers from tk:backend

--- a/platforms/tktrex/shared/tsconfig.json
+++ b/platforms/tktrex/shared/tsconfig.json
@@ -31,5 +31,5 @@
     "require": ["tsconfig-paths/register"]
   },
   "include": ["**/*.ts", "**/*.js", "**/*.json"],
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "build", "jest.config.js", "jest.setup.js"]
 }
